temp-02: fix statuses & handlers
